--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./public/images/CreatorsLogo.jpg" style="border-radius: 14px;" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Creators'Hub</title>
   <style>
